--- a/src/main/webapp/WEB-INF/views/people/new.html
+++ b/src/main/webapp/WEB-INF/views/people/new.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>New Person</title>
+    </head>
+    <body>
+        <form th:method="POST" th:action="@{/people}" th:object="${person}">
+            <label for="name">Enter name: </label>
+            <input type="text" th:field="*{name}" id="name"/>
+
+            <input type="submit" value="Create!">
+        </form>
+    </body>
 </html>
