--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+  <head>
+      <meta charset="UTF-8">
+      <title>Person</title>
+  </head>
+  <body>
+    <p th:text="${person.getName()}"></p>
+    <p th:text="${person.getId()}"></p>
+  </body>
 </html>
