add delete function and bottom for creation new person

--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -8,5 +8,10 @@
     <div th:each="person : ${people}">
         <a th:text="${person.getName()}" th:href="@{/people/{id}(id=${person.getId()})}">user</a>
     </div>
+
+    <br/>
+    <hr/>
+
+    <a href="/people/new">Create new person</a>
   </body>
 </html>
