--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -10,6 +10,10 @@
 
     <br>
 
-    <a th:href="@{/people/{id}/edit (id=${person.getId()})}">Edit</a>
+    <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
+
+    <form th:method="DELETE" th:action="@{people/{id}(id=${person.getId()})}">
+        <input type="submit" value="Delete">
+    </form>
   </body>
 </html>
