--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -7,12 +7,14 @@
   <body>
     <p th:text="${person.getName()}"></p>
     <p th:text="${person.getId()}"></p>
+    <p th:text="${person.getAge()}"></p>
+    <p th:text="${person.getEmail()}"></p>
 
     <br>
 
     <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 
-    <form th:method="DELETE" th:action="@{people/{id}(id=${person.getId()})}">
+    <form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
         <input type="submit" value="Delete">
     </form>
   </body>
